# internal/application/dto/gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package dto
 
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 // Defines values for GetSiteResponseHealthCheckStatus.
 const (
 	Healthy        GetSiteResponseHealthCheckStatus = "Healthy"
@@ -146,6 +150,14 @@ type InternalServerError = ErrorResponse
 // UnauthorizedError defines model for UnauthorizedError.
 type UnauthorizedError = ErrorResponse
 
+// UploadResumeMultipartBody defines parameters for UploadResume.
+type UploadResumeMultipartBody struct {
+	File *openapi_types.File `json:"file,omitempty"`
+
+	// Metadata json object with file metadata
+	Metadata *map[string]interface{} `json:"metadata,omitempty"`
+}
+
 // EnrichContentJSONRequestBody defines body for EnrichContent for application/json ContentType.
 type EnrichContentJSONRequestBody = EnrichContentRequest
 
@@ -160,6 +172,9 @@ type HandleEventJSONRequestBody = StripeWebhookRequest
 
 // CreateSiteJSONRequestBody defines body for CreateSite for application/json ContentType.
 type CreateSiteJSONRequestBody = CreateSiteRequest
+
+// UploadResumeMultipartRequestBody defines body for UploadResume for multipart/form-data ContentType.
+type UploadResumeMultipartRequestBody UploadResumeMultipartBody
 
 // UpdateSiteJSONRequestBody defines body for UpdateSite for application/json ContentType.
 type UpdateSiteJSONRequestBody = UpdateSiteRequest
